# stepwise-edx-plugin

./: .env-sample  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  __init__.py  manage.py  pyproject.toml  release.sh  setup.py
.github/workflows/: ci.yml
requirements/: common.in  common.txt  constraints.txt  github.in  local.txt  private.txt
stepwise/: .env.dist  __init__.py  apps.py  registration.py  urls.py
stepwise/settings/: common.py
stepwise_api/: README.md  __init__.py  __version__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
stepwise_plugin/: README.md  admin.py  apps.py  models.py  registration.py  session.py  stepwise_oauth.py  urls.py  utils.py
stepwise_plugin/api/: README.md  serializers.py  urls.py  views.py
stepwise_plugin/dashboard/: utils.py  views.py
stepwise_plugin/data/: META.json
stepwise_plugin/ecommerce/: utils.py
stepwise_plugin/learning_content/: views.py
stepwise_plugin/locale/: README.md  utils.py  views.py
stepwise_plugin/member_press/: api.py  decorators.py  utils.py
stepwise_plugin/migrations/: 0001_initial.py  0002_ecommerce.py  0002_locale.py  0003_alter_ecommerceconfiguration_course_id.py  0003_auto_20220115_1726.py  0004_auto_20220115_1802.py  0005_auto_20240205_2019.py
stepwise_plugin/rover_ecommerce/: README.md  __init__.py  __version__.py  admin.py  apps.py  models.py  utils.py
stepwise_plugin/scripts/: init-db.sql
stepwise_plugin/settings/: common.py  production.py
stepwise_user/: .env.dist  apps.py  registration.py  session.py  urls.py  utils.py  views.py
(+5 files in other folders)
